--- a/styles.css
+++ b/styles.css
@@ -117,10 +117,80 @@ padding-top: 125px;
     margin-bottom: 106px;
 }
 .skills-list{
-    
+
+}
+.skills-list-more{
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 47px;
 }
 .nav{
     font-size: 34px;
     text-align: center;
     
+}
+
+#skills .list-more{
+    margin-bottom: 68px;
+}
+#skills img {
+    width: 60px;
+}
+#skills .figma {
+    width: 45px;
+}
+#skills .htmlCss{
+    width: 90px;
+}
+#skills .sql{
+    width: 110px;
+}
+#skills .cplus{
+    width: 50px;
+}
+
+
+#portfolio{
+    position: absolute;
+    width: 100%;
+    height: 3336px;
+    top: 2802px;
+
+    background: #F6F6F6;
+}
+.portfolio-h{
+    margin-top: 89px;
+    margin-bottom: 82px;
+}
+#portfolio .portfolio-item p{
+    text-decoration: underline;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #828282;
+}
+#portfolio img {
+    width: 45%;
+    margin-left: 28%;
+}
+#portfolio button {
+    cursor: pointer;
+    text-decoration: none;
+    margin-left: 47%;
+    margin-top: 20px;
+    margin-bottom: 70px;
+    padding: 25px;
+    border: none;
+    border-radius: 20px;
+    background-color: white;
+    font-weight: 300;
+    
+}
+#portfolio button:hover{
+    background-color: #000000;
+    color: #FFFFFF;
+}
+
+#portfolio .portfolio-item {
+
 }
