--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ padding-top: 125px;
 #portfolio{
     position: absolute;
     width: 100%;
-    height: 3336px;
+    height: 6040px;
     top: 2802px;
 
     background: #F6F6F6;
@@ -184,11 +184,13 @@ padding-top: 125px;
     border-radius: 20px;
     background-color: white;
     font-weight: 300;
+    background-color: #070707;
+    color: #FFFFFF;
     
 }
 #portfolio button:hover{
-    background-color: #000000;
-    color: #FFFFFF;
+    background-color: white;
+    color: #070707;
 }
 
 #portfolio .portfolio-item {
