--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body{
     background: #FFFFFF;
     margin: 0;
+    width: 100%;
 }
     
 
@@ -216,7 +217,7 @@ padding-top: 125px;
 
 #contacts{
     position: absolute;
-    width: 1448px;
+    width: 100%;
     height: 848px;
     top: 8842px;
     background: #FFFFFF;
@@ -251,3 +252,59 @@ padding-top: 125px;
     cursor: pointer;
 }
 
+@media all and (max-width: 850px){
+    *{
+        font-size: 14px;
+    }
+    hr{
+        width: 45%;
+    }
+    .photo .photo-background{
+        width: 230px;
+        height: 506px;
+        left: 196;
+    }
+    .photo .photo-img{
+        position: absolute;
+        width: 278px;
+        height: 266px;
+        left:350px;
+    }
+    .container .name{
+        font-size: 30px;
+    }
+    header .header-home{
+        padding-left: 96px;
+    }
+    .aboutMe-par{
+        margin-left: 130px;
+    }
+    #portfolio{
+        height: auto;
+        margin-bottom: 70px;
+    }
+    
+    #contacts{
+        position: absolute;
+        width: 100%;
+        height: 848px;
+        top: 6992px;
+        background: #FFFFFF;
+    }
+    .contacts-h{
+        margin-top: 70px;
+        margin-bottom: 92px;
+    }
+    
+    #contacts button{
+        margin-top: 72px;
+        margin-bottom: 102px;
+        font-size: 18px;
+        width: 40%;
+        margin-left: 250px;
+    }
+    #contacts-svg {
+        margin-left: 32%;
+    }
+
+}
