header font bolder

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ header li{
     cursor: pointer;
     color: #828282;
     text-decoration: none;
+    font-weight: 300;
 }
 header a{
     text-decoration: none;
