--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ header li:hover{
     padding-right: 200px;
 }
 hr{
-    width: 960px;
+    width: 77%;
     color: #828282;
 }
 
@@ -118,6 +118,7 @@ padding-top: 125px;
     margin-left: 500px;
     margin-top: 39px;
     margin-bottom: 160px;
+    text-align: center;
 }
 
 #skills{
@@ -268,9 +269,10 @@ padding-top: 125px;
         font-size: 14px;
     }
     hr{
-        width: 45%;
+        width: 65%;
     }
     .photo .photo-background{
+        margin-top: 50px;
         width: 230px;
         height: 506px;
         left: 196px;
@@ -288,7 +290,11 @@ padding-top: 125px;
         margin-top: 60px;
     }
     header .header-home{
-        padding-left: 50px;
+        padding-left: 0;
+        margin-left: 270px;
+    }
+    header li{
+        margin-right: 50px;
     }
     .aboutMe-par{
         margin-left: 130px;
