--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,7 @@ padding-top: 125px;
     height: 627.51px;
     top: 1019px;
     background: #F6F6F6;
+    text-align: center;
 }
 .aboutMe-h{
     
