--- a/styles.css
+++ b/styles.css
@@ -82,18 +82,18 @@ padding-top: 125px;
 }
 .photo .photo-background{
     position: absolute;
-    width: 937.6px;
-    height: 400px;
-    left: 270.71px;
-    top: 400px;
+    width: 60%;
+    height: 60%;
+    left: 20%;
+    top: 52%;
     background: #090909;
 }
 .photo .photo-img{
     position: absolute;
-    width: 490px;
-    height: 470px;
-    left: 434px;
-    top: 500px;
+    width: 33%;
+    height: 66%;
+    left: 30%;
+    top: 60%;
 
 }
 #aboutMe{
@@ -272,15 +272,17 @@ padding-top: 125px;
         width: 45%;
     }
     .photo .photo-background{
-        width: 230px;
-        height: 506px;
-        left: 196px;
+        width: 34%;
+        height: 35%;
+        left: 25%;
+        top: 480px;
+        
     }
     .photo .photo-img{
-        position: absolute;
-        width: 278px;
-        height: 266px;
-        left:350px;
+        top: 550px;
+        width: 45%;
+        height: 33%;
+        left:35%;
     }
     .container .name{
         font-size: 30px;
@@ -344,16 +346,16 @@ padding-top: 125px;
         font-size: 14px;
     }
     .photo .photo-background{
-        margin-top: 20px;
-        width: 230px;
-        height: 506px;
-        left: 50px;
+        top: 50%;
+        width: 40%;
+        height: 60%;
+        left: 10%;
     }
     .photo .photo-img{
-        position: absolute;
-        width: 278px;
-        height: 266px;
-        left: 100px;
+        
+        width: 65%;
+        height: 30%;
+        left: 20%;
     }
     .container .name{
         font-size: 27px;
