--- a/styles.css
+++ b/styles.css
@@ -188,6 +188,10 @@ padding-top: 125px;
 
     background: #F6F6F6;
 }
+#portfolio p{
+    margin-left: 5%;
+    margin-right: 5%;
+}
 .portfolio-h{
     margin-top: 89px;
     margin-bottom: 82px;
@@ -407,7 +411,7 @@ padding-top: 125px;
         margin-right: 15%;
     }
     #portfolio button {
-        margin-left: 25%;
+        
         padding: 15px;
     }
     #aboutMe-par{
